fixed select's focus visible

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1657,11 +1657,12 @@ h6 a {
 }
 
 .menu-control .control-style {
-    border: 0;
-    border-radius: 0;
     cursor: pointer;
     height: 1.574em;
     overflow: hidden;
+}
+.menu-control .control-style select:focus-visible {
+   outline: none;
 }
 
 .menu-control i {
